# algorithmia-rust

./: Cargo.toml  README.md  build.rs
examples/: datatest.rs  dijkstra.rs
src/: client.rs  error.rs  handler.rs  lib.rs
src/algo/: bytevec.rs  mod.rs
src/data/: dir.rs  file.rs  mod.rs  object.rs
