[package]
name = "algorithmia"
version = "3.0.0-beta.3"
license = "MIT"
authors = ["Anthony Nowell <anthony@algorithmia.com>"]
description = "Client for calling algorithms and managing data hosted using Algorithmia"
documentation = "http://docs.rs/algorithmia"
repository = "https://github.com/algorithmiaio/algorithmia-rust"
homepage = "https://algorithmia.com/developers/clients/rust/"
readme = "README.md"
keywords = ["algorithmia", "algorithm", "machine-learning", "ai", "ml"]
categories =["algorithms", "web-programming::http-client", "science"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "algorithmiaio/algorithmia-rust" }
appveyor = { repository = "algorithmiaio/algorithmia-rust" }

[dependencies]
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.11.0"
mime = "0.3.13"
reqwest = {version = "0.10", default_features = false, features = ["blocking", "json"], optional = true}
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
headers = "0.3"
backtrace = "0.3"

[dependencies.hyper]
version = "0.13"
default-features = false

[build-dependencies]
rustc_version = "0.2.1"

[features]
handler = []
default = ["default-tls"]
default-tls = ["reqwest", "reqwest/default-tls"]
rust-tls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
features = ["handler"]
